# burn

./: Cargo.toml
bench-safetensors/: Cargo.toml
bench-safetensors/benches/: compare.rs
burn-book/src/: SUMMARY.md
crates/burn-core/src/nn/: mod.rs  rope_encoding.rs
crates/burn-core/src/nn/attention/: mask.rs  mod.rs  mqa.rs  streaming.rs  streaming_mqa.rs
crates/burn-core/tests/: attention_mqa.rs  attention_mqa_streaming.rs  attention_streaming.rs
crates/burn-cubecl-fusion/src/shared/: io.rs
crates/burn-cubecl/src/: batch_impl.rs  lib.rs
crates/burn-extended/: Cargo.toml
crates/burn-extended/src/: lib.rs
crates/burn-store/: Cargo.toml
crates/burn-store/benches/: safetensor_loading.rs
crates/burn-store/src/safetensors/: mod.rs  store.rs
crates/burn-tensor/src/: lib.rs
crates/burn-tensor/src/tensor/: batch.rs  mod.rs
examples/ace-step-inference/: Cargo.toml
examples/ace-step-inference/src/: main.rs
examples/gpt-oss-inference/: Cargo.toml
examples/gpt-oss-inference/src/: main.rs
examples/matrix-game-2-inference/: Cargo.toml
examples/matrix-game-2-inference/src/: main.rs
